fixes text wrapping for no reason on mobile

--- a/_sass/components/hero.scss
+++ b/_sass/components/hero.scss
@@ -34,6 +34,7 @@
     color: rgba(249, 249, 249, 0.67);
     font-size: 0.875rem;
     font-weight: lighter;
+    white-space: nowrap;
   }
 
   .hero-title {
